--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-gradio>=4.0.0
-ollama>=0.1.0
-paddleocr>=2.6.1.3
+# Core App Requirements
+gradio==4.24.0
+paddleocr==2.6.1.3
 paddlepaddle==2.6.2
 Pillow
 numpy
+requests
+
+# LLM Client
+ollama==0.1.7
