--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Core App Requirements
-gradio==4.24.0
-paddleocr==2.6.1.3
-paddlepaddle==2.6.2
+gradio
+paddleocr
+paddlepaddle
 Pillow
 numpy
 requests
 
 # LLM Client
-ollama==0.1.7
+ollama
